Just added one Quote.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SARVESH | SAD0XER | SARVESHAD</title>
 </head>
 <body>
-    blah blah blah...!
-    haha.
+    <h1>if you are not living on the edge then you are occupying too much space. ____Aman Dhattarwal</h1>
 </body>
 </html>
