--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SARVESH | SAD0XER | SARVESHAD</title>
+    <title> | SAD0XER | </title>
 </head>
-<body>
-    <h1>if you are not living on the edge then you are occupying too much space. ____Aman Dhattarwal</h1>
+<body style="background-color: #232323;">
+    <!-- <h1>if you are not living on the edge then you are occupying too much space. ____Aman Dhattarwal</h1> -->
+    <div align="center"><a href="https://git.io/typing-svg"><img
+            src="https://readme-typing-svg.demolab.com?font=Fira+Code&duration=1000&pause=350&center=true&vCenter=true&multiline=true&width=300&height=500&lines=Hey...!+%F0%9F%98%80%F0%9F%91%8B;%F0%9F%98%84Wish+you%F0%9F%98%84;%F0%9F%A4%A9+Happy+%F0%9F%98%8A;%F0%9F%98%8A+Birthday..!+%F0%9F%8E%82;%F0%9F%8E%8A%F0%9F%8E%8A%F0%9F%8E%8A%F0%9F%8E%8A%F0%9F%8E%8A%F0%9F%8E%8A%F0%9F%8E%8A%F0%9F%8E%8A%F0%9F%8E%8A%F0%9F%8E%8A%F0%9F%8E%8A%F0%9F%8E%8A;%F0%9F%A4%A9%F0%9F%A5%B3%F0%9F%A4%A9%F0%9F%A5%B3%F0%9F%A4%A9%F0%9F%A5%B3A_K_A_N_K_S_H_A%F0%9F%A5%B3%F0%9F%A4%A9%F0%9F%A5%B3%F0%9F%A4%A9%F0%9F%A5%B3%F0%9F%A4%A9;%F0%9F%A5%B3%F0%9F%A5%B3%F0%9F%A5%B3%F0%9F%A5%B3%F0%9F%A5%B3%F0%9F%A5%B3%F0%9F%A5%B3%F0%9F%A5%B3%F0%9F%A5%B3%F0%9F%A5%B3%F0%9F%A5%B3%F0%9F%A5%B3;_________________________________________;I+hope+you+have;enjoy+your+day..;And+this+SVG+TOO...+%F0%9F%98%81%F0%9F%98%81;.................................+.++.++.+++.;++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++"
+            alt="Typing SVG" /></a>
+    </div>
+
+    
 </body>
 </html>
