Delete some break tags.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body style="background-color: #292929">
     <h1 style="text-align: center; color: rgba(255, 255, 255, 0.444)">if you are not living on the edge then you are occupying too much space. ____Aman Dhattarwal</h1>
-    <br><br><br><br><br><br><br><br><br><div style="align-items: center ; text-align: center; font-weight: 500; font-size: 20px; color: white;">This site is under development..</div>
+    <br><br><br><br><br><div style="align-items: center ; text-align: center; font-weight: 500; font-size: 20px; color: white;">This site is under development..</div>
 </body>
 </html>
