--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SARVESH | SAD0XER | SARVESHAD</title>
 </head>
-<body style="background-color: #292929">
-    <h1 style="text-align: center; color: rgba(255, 255, 255, 0.444)">if you are not living on the edge then you are occupying too much space. ____Aman Dhattarwal</h1>
-    <br><br><br><br><br><br><br><br><br><div style="align-items: center ; text-align: center; font-weight: 500; font-size: 20px; color: white;">This site is under development..</div>
+<body style="background-color: #292929; margin:0%">
+    <h1 style="text-align: center; color: rgb(133, 133, 133)">if you are not living on the edge then you are occupying too much space. ____Aman Dhattarwal<br/><br /><br /><br /></h1>
+    <div><a href="https://git.io/typing-svg"><img
+            src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=900&pause=1000&color=000000&background=FFF000&center=true&vCenter=true&width=1182&lines=%E2%9A%A0%EF%B8%8FSITE+IS+UNDER+CONSTRUCTION%E2%9A%A0%EF%B8%8F"
+            alt="Typing SVG" /></a></div>
 </body>
 </html>
