--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>SARVESH | SAD0XER | SARVESHAD</title>
 </head>
-<body style="background-color: #292929; margin:0%">
-    <h1 style="text-align: center; color: rgb(133, 133, 133)">if you are not living on the edge then you are occupying too much space. ____Aman Dhattarwal<br/><br /><br /><br /></h1>
-    <div><a href="https://git.io/typing-svg"><img
-            src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=900&pause=1000&color=000000&background=FFF000&center=true&vCenter=true&width=1182&lines=%E2%9A%A0%EF%B8%8FSITE+IS+UNDER+CONSTRUCTION%E2%9A%A0%EF%B8%8F"
-            alt="Typing SVG" /></a></div>
+
+<body>
+    <div>
+        <a href="https://git.io/typing-svg">
+            <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=400&pause=1000&color=000000&background=FFF000&center=true&vCenter=true&width=400&lines=%E2%9A%A0%EF%B8%8FSITE+IS+UNDER+CONSTRUCTION%E2%9A%A0%EF%B8%8F"
+                alt="Typing SVG" /></a>
+    </div>
 </body>
+
 </html>
